# pysketch

./: CMakeLists.txt  LICENSE  README.md  main.cpp  setup.py
pysketch/: __init__.py  pysketch.py  sketch_wrapper.cpp  sketch_wrapper.h
src/: Sketch.cpp  Sketch.h
